crates/shipper-core/src/ops/auth/snapshots/shipper_core__ops__auth__resolver__tests__snapshots__snapshot_resolve_token_custom_registry_from_credentials.snap
---
source: crates/shipper-core/src/ops/auth/resolver.rs
expression: auth
---
AuthInfo {
    token: Some(
        "priv-token-abc",
    ),
    source: CredentialsFile,
    detected: true,
}
