crates/shipper-core/src/ops/auth/snapshots/shipper_core__ops__auth__resolver__tests__snapshots__snapshot_resolve_token_from_credentials_file.snap
---
source: crates/shipper-core/src/ops/auth/resolver.rs
expression: auth
---
AuthInfo {
    token: Some(
        "file-secret-token",
    ),
    source: CredentialsFile,
    detected: true,
}
